[package]
name = "examples"
version = "1.4.0"
authors = ["IOTA Stiftung"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.62"
bls12_381_plus.workspace = true
identity_eddsa_verifier = { path = "../identity_eddsa_verifier", default-features = false }
identity_ecdsa_verifier = { path = "../identity_ecdsa_verifier", default-features = false, features = ["es256"] }
identity_iota = { path = "../identity_iota", default-features = false, features = ["iota-client", "client", "memstore", "domain-linkage", "revocation-bitmap", "status-list-2021", "resolver"] }
identity_stronghold = { path = "../identity_stronghold", default-features = false }
identity_storage_tpm = { path = "../identity_storage_tpm" }
iota-sdk = { version = "1.0", default-features = false, features = ["tls", "client", "stronghold"] }
json-proof-token.workspace = true
primitive-types = "0.12.1"
rand = "0.8.5"
sd-jwt-payload = { version = "0.2.1", default-features = false, features = ["sha"] }
serde_json = { version = "1.0", default-features = false }
tokio = { version = "1.29", default-features = false, features = ["rt"] }
tss-esapi.workspace = true
hex = "0.4.3"
x509-cert = "0.2.5"
p256 = "0.13.2"
openssl = "0.10.69"
csv = "1.3.1"
serde.workspace = true
reqwest = {version = "0.12.12", features = ["json", "multipart"]}

[lib]
path = "utils/utils.rs"

#[[example]]
#path = "0_basic/0_create_did.rs"
#name = "0_create_did"
#
#[[example]]
#path = "0_basic/1_update_did.rs"
#name = "1_update_did"
#
#[[example]]
#path = "0_basic/2_resolve_did.rs"
#name = "2_resolve_did"
#
#[[example]]
#path = "0_basic/3_deactivate_did.rs"
#name = "3_deactivate_did"
#
#[[example]]
#path = "0_basic/4_delete_did.rs"
#name = "4_delete_did"
#
#[[example]]
#path = "0_basic/5_create_vc.rs"
#name = "5_create_vc"
#
#[[example]]
#path = "0_basic/6_create_vp.rs"
#name = "6_create_vp"
#
#[[example]]
#path = "0_basic/7_revoke_vc.rs"
#name = "7_revoke_vc"
#
#[[example]]
#path = "0_basic/8_stronghold.rs"
#name = "8_stronghold"
#
#[[example]]
#path = "1_advanced/0_did_controls_did.rs"
#name = "0_did_controls_did"
#
#[[example]]
#path = "1_advanced/1_did_issues_nft.rs"
#name = "1_did_issues_nft"
#
#[[example]]
#path = "1_advanced/2_nft_owns_did.rs"
#name = "2_nft_owns_did"
#
#[[example]]
#path = "1_advanced/3_did_issues_tokens.rs"
#name = "3_did_issues_tokens"
#
#[[example]]
#path = "1_advanced/4_alias_output_history.rs"
#name = "4_alias_output_history"
#
#[[example]]
#path = "1_advanced/5_custom_resolution.rs"
#name = "5_custom_resolution"
#
#[[example]]
#path = "1_advanced/6_domain_linkage.rs"
#name = "6_domain_linkage"
#
#[[example]]
#path = "1_advanced/7_sd_jwt.rs"
#name = "7_sd_jwt"
#
#[[example]]
#path = "1_advanced/8_status_list_2021.rs"
#name = "8_status_list_2021"
#
#[[example]]
#path = "1_advanced/9_zkp.rs"
#name = "9_zkp"
#
#[[example]]
#path = "1_advanced/10_zkp_revocation.rs"
#name = "10_zkp_revocation"
#
#[[example]]
#path = "1_advanced/11_linked_verifiable_presentation.rs"
#name = "11_linked_verifiable_presentation"
#
#
## Custom section 

[[example]]
path = "2_custom/5_create_vc.rs"
name = "5_create_vc_tpm"

[[example]]
path = "2_custom/6_create_vp.rs"
name = "6_create_vp_tpm"

# Benchmarks
[[example]]
path = "3_benchmark/0_keygen_memstore.rs"
name = "0_keygen_memstore"

[[example]]
path = "3_benchmark/1_keygen_stronghold.rs"
name = "1_keygen_stronghold"

[[example]]
path = "3_benchmark/2_keygen_tpm.rs"
name = "2_keygen_tpm"

[[example]]
path = "3_benchmark/3_creatediddoc_memstore.rs"
name = "3_creatediddoc_memstore"

[[example]]
path = "3_benchmark/4_creatediddoc_stronghold.rs"
name = "4_creatediddoc_stronghold"

[[example]]
path = "3_benchmark/5_creatediddoc_tpm.rs"
name = "5_creatediddoc_tpm"

[[example]]
path = "3_benchmark/6_issue_vc_memstore.rs"
name = "6_issue_vc_memstore"

[[example]]
path = "3_benchmark/7_issue_vc_stronghold.rs"
name = "7_issue_vc_stronghold"

[[example]]
path = "3_benchmark/8_issue_vc_tpm_1rtt.rs"
name = "8_issue_vc_tpm_1rtt"