[package]
name = "identity_storage_tpm"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.89"
async-trait = { version = "0.1.64", default-features = false }
hex = "0.4.3"
identity_jose = { version = "=1.4.0", path = "../identity_jose"}
identity_storage = { version = "=1.4.0", path = "../identity_storage", default_features = false }
iota-crypto = "0.23.2"
thiserror.workspace = true
tss-esapi.workspace = true

[dev-dependencies]
testcontainers = { version = "0.22.0", features = ["properties-config"] }
tokio = { version = "1.38.1", features = ["test-util", "macros"] }
